# organiser

./: .env.example  .eslintrc.json  README.md  package-lock.json  package.json  tailwind.config.ts
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/Gadgets/: Calendar.css
client/src/Gadgets/Calendar/: Calendar.css  Calendar.tsx
server/: .env  .env.example  Cargo.toml  Makefile  calendar.rs  changelog.md  diesel.toml  package-lock.json  postgres.yaml
server/api/: Cargo.toml
server/api/src/: lib.rs
server/api/src/calendar/: calendar.rs
server/entity/src/: lib.rs
server/entity/src/entities/: mod.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs
server/migrations/2023-06-03-020435_create_user_table/: up.sql
server/src/: main.rs
server/src/api/: auth_controller.rs  calendar.rs  calendar_controller.rs  config.rs  generic.rs  mod.rs  response_handler.rs  todos.rs  user_controller.rs
server/src/entity/: calendar.rs  event.rs  prelude.rs  user.rs
server/src/helper/: jwt.rs
server/src/model/: auth_model.rs  user_model.rs
server/src/models/: users.rs
server/src/repository/: database.rs  schema.rs
server/src/service/: auth_service.rs  calendar_service.rs  mod.rs  user_service.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/Header/: index.tsx
vite-react-app/: package-lock.json
vite-react-app/src/: App.css  App.tsx
vite-react-app/src/Gadgets/: Calendar.css  StyledComponents.tsx
(+8 files in other folders)
