[package]
name = "server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["migration"]

[dependencies]
actix-web = "4"
sea-orm = { version = "^0.11.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "default" ] }
serde_json = "1.0.96"
serde = "1.0.163"
jsonwebtoken = "8"
actix-cors = "0.6.4"
argon2 = "0.5.0"
chrono = "0.4.26"
